Improvements for Toon Implementation